# lpl_open-gl

./: .gitignore  CMakeLists.txt  external.7z
example/: CMakeLists.txt  glm.cpp
include/: shader.h
shader/: color.vs
src/: main.cpp
